# raylib-game-of-life

./: .gitignore  .gitmodules  CMakeLists.txt
src/: data-structure.c  data-structure.h  game-of-life.c
